--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Batman</title>
+<title>SuperMario</title>
 <script src='lib/quintus.js'></script>
 <script src='lib/quintus_sprites.js'></script>
 <script src='lib/quintus_scenes.js'></script>
@@ -16,7 +16,7 @@
 <style>
   canvas { background-color:black; }
 </style>
-<script src='.......'></script>
+<script src='game.js'></script>
 </head>
 <body>
 </body>
