background html and icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>SuperMario</title>
+<title>Batman</title>
+<link rel="icon" type="image/x-icon" href="icon.ico"/>
+
 <script src='lib/quintus.js'></script>
 <script src='lib/quintus_sprites.js'></script>
 <script src='lib/quintus_scenes.js'></script>
@@ -13,11 +15,18 @@
 <script src='lib/quintus_anim.js'></script>
 <script src='lib/quintus_tmx.js'></script>
 <script src='lib/quintus_audio.js'></script>
+
 <style>
-  canvas { background-color:black; }
+ canvas {
+	position: absolute;
+	background-color: black;
+	margin-top: 20%;
+}
 </style>
 <script src='game.js'></script>
+
 </head>
-<body>
+<body background="images/background.jpg">
+
 </body>
 </html>
