Cambiado a protocolo HTTPS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <source src="../scenes/initLevel.ogv" type="video/ogg"/>
   </video>
 </div> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 <script>
     $("#video").bind("ended", function() {
