--- a/scenes/endLevel3.html
+++ b/scenes/endLevel3.html
@@ -13,9 +13,9 @@
 <div style="text-align:center"> 
  
   <video width="544" height="544" autoplay>
-    <source src="../scenes/endLevel3.mp4" type="video/mp4"/>
-    <source src="../scenes/endLevel3.webm" type="video/webm"/>
-    <source src="../scenes/endLevel3.ogv" type="video/ogg"/>
+    <source src="http://localhost/DVI/Batman/scenes/initLevel.mp4" type="video/mp4"/>
+    <source src="http://localhost/DVI/Batman/scenes/initLevel.webm" type="video/webm"/>
+    <source src="http://localhost/DVI/Batman/scenes/initLevel.ogv" type="video/ogg"/>
   </video>
 </div> 
 
