--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script src='game.js'></script>
 
 </head>
-<body background="images/background.jpg">
+<body background="images/background2.jpg">
 
 </body>
 </html>
